fix greyed-out scrollbars appearing on chrome

--- a/css/styles.css
+++ b/css/styles.css
@@ -441,7 +441,7 @@ input:focus {
 }
 
 .table-container {
-    overflow: scroll;
+    overflow: auto;
 }
 
 .delete {
